package com.keanu.software.three.a3;

/**
 * <p>
 *
 * </p>
 *
 * @author <a href="https://github.com/Li-Keanu">keanu</a>
 * @since 2024/11/5 10:28
 */
public class Department {
    private Instructor[] instructors;
    private Subject[] subjects;
}
